--- a/app/src/main/res/layout/activity_material_design.xml
+++ b/app/src/main/res/layout/activity_material_design.xml
@@ -69,7 +69,7 @@
                     app:layout_collapseParallaxMultiplier="0.5"
                     android:layout_gravity="end|center_vertical|bottom"/>
 
-            </com.google.android.material.appbar.CollapsingToolbarLayout>>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 <!--            <androidx.appcompat.widget.Toolbar-->
 <!--                android:id="@+id/toolbar"-->
