--- a/app/src/main/res/layout/activity_material_design.xml
+++ b/app/src/main/res/layout/activity_material_design.xml
@@ -22,8 +22,8 @@
                 android:layout_height="match_parent"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:collapsedTitleGravity="left"
-                android:paddingLeft="10dp"
-                app:contentScrim="@color/colorPrimary"
+                android:paddingLeft="0dp"
+                app:contentScrim="@color/cardview_dark_background"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <ImageView
@@ -56,6 +56,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:layout_marginTop="25dp"
                     app:title="haha"
+                    app:titleMarginStart="10dp"
                     app:contentInsetLeft="-100dp"
                     app:contentInsetStart="-100dp"
                     app:layout_collapseMode="pin"/>
