--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="0dp"
-        android:text="MATERIAL示例"
+        android:text="Material示例"
+        android:textAllCaps="false"
         app:layout_constraintWidth_percent="0.7"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,8 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:text="MOTION测试"
+        android:text="MotionLayout测试"
+        android:textAllCaps="false"
         app:layout_constraintWidth_percent="0.7"
         app:layout_constraintTop_toBottomOf="@id/testMaterialBtn"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -34,9 +36,22 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:text="CONSTRAINT测试"
+        android:text="ConstraintLayout测试"
+        android:textAllCaps="false"
         app:layout_constraintWidth_percent="0.7"
         app:layout_constraintTop_toBottomOf="@id/testMotionLayoutBtn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:id="@+id/testPagingBtn"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:text="Paging测试"
+        android:textAllCaps="false"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintTop_toBottomOf="@id/testConstraintLayoutBtn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
