--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -34,11 +34,12 @@
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
+            android:id="@+id/star_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/ic_star"
+            android:src="@drawable/ic_star_dark"
             tools:ignore="ContentDescription" />
 
         <TextView
