--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     app:layoutDescription="@xml/step5"
     app:motionDebug="SHOW_PATH">
 
