--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -48,6 +48,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" />
 
+        <TextView
+            android:id="@+id/delete_tv"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="删除"
+            android:layout_gravity="center_vertical" />
+
     </LinearLayout>
 
 </LinearLayout>
