--- a/app/src/main/res/xml/fold_title_description.xml
+++ b/app/src/main/res/xml/fold_title_description.xml
@@ -10,97 +10,31 @@
 
         <OnClick
             app:clickAction="toggle"
-            app:targetId="@+id/title_next_iv"/>
+            app:targetId="@+id/title_layout"/>
 
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
 
         <Constraint
-            android:id="@+id/title_expand_view"
+            android:id="@+id/title_layout"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="80dp"
+            android:layout_height="44dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
-
-        <Constraint
-            android:id="@+id/title_next_iv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <CustomAttribute
-                app:attributeName="colorFilter"
-                app:customColorValue="#1c75ff"/>
-
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/title_content_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:scaleX="1.0"
-            android:scaleY="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-<!--            <CustomAttribute-->
-<!--                app:attributeName="textSize"-->
-<!--                app:customFloatValue="14"/>-->
-
-        </Constraint>
 
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
 
         <Constraint
-            android:id="@+id/title_expand_view"
+            android:id="@+id/title_layout"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginTop="80dp"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
-
-        <Constraint
-            android:id="@+id/title_next_iv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="120dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <CustomAttribute
-                app:attributeName="colorFilter"
-                app:customColorValue="#d42f65"/>
-
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/title_content_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:scaleX="1.5"
-            android:scaleY="1.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-<!--            <CustomAttribute-->
-<!--                app:attributeName="textSize"-->
-<!--                app:customFloatValue="20"/>-->
-
-        </Constraint>
 
     </ConstraintSet>
 
