--- a/app/src/main/res/xml/fold_title_description.xml
+++ b/app/src/main/res/xml/fold_title_description.xml
@@ -8,10 +8,6 @@
         app:motionInterpolator="easeInOut"
         app:duration="200">
 
-        <OnClick
-            app:clickAction="toggle"
-            app:targetId="@+id/title_layout"/>
-
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -19,7 +15,7 @@
         <Constraint
             android:id="@+id/title_layout"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
