--- a/app/src/main/res/layout/fold_title_view.xml
+++ b/app/src/main/res/layout/fold_title_view.xml
@@ -124,4 +124,9 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/spaceView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </androidx.constraintlayout.motion.widget.MotionLayout>
