--- a/app/src/main/res/xml/fold_title_description.xml
+++ b/app/src/main/res/xml/fold_title_description.xml
@@ -15,10 +15,19 @@
         <Constraint
             android:id="@+id/title_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+        <Constraint
+            android:id="@+id/spaceView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="@id/title_layout"
+            app:layout_constraintRight_toRightOf="@id/title_layout"
+            app:layout_constraintTop_toBottomOf="@id/title_layout"/>
 
     </ConstraintSet>
 
@@ -31,6 +40,15 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+        <Constraint
+            android:id="@+id/spaceView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintLeft_toLeftOf="@id/title_layout"
+            app:layout_constraintRight_toRightOf="@id/title_layout"
+            app:layout_constraintTop_toBottomOf="@id/title_layout"/>
 
     </ConstraintSet>
 
