--- a/app/src/main/res/layout/fold_title_view.xml
+++ b/app/src/main/res/layout/fold_title_view.xml
@@ -13,9 +13,9 @@
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/title_bg_expand">
 
-        <!-- title固定区域-->
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -33,28 +33,6 @@
                     android:layout_marginStart="21dp"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_close_white"/>
-
-                <com.example.kotlindemo.widget.FoldTextView
-                    android:id="@+id/title_fixed_content_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/title_fixed_close_iv"
-                    android:layout_toStartOf="@+id/title_fixed_skip_tv"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginEnd="8dp"
-                    android:includeFontPadding="false"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="11sp"
-                    app:showTip="true"
-                    app:showMaxLine="2"
-                    app:tipColor="#000000"
-                    app:foldText="16"
-                    app:tipWithTag="true"
-                    app:tagColor="#90A7B2"
-                    app:tipClickable="false"
-                    app:tipGravity="0"
-                    tools:ignore="SmallSp" />
 
                 <TextView
                     android:id="@+id/title_fixed_skip_tv"
@@ -89,44 +67,15 @@
 
         </LinearLayout>
 
-        <!-- title展开区域-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/title_bg_expand"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:orientation="vertical"
-            tools:ignore="RtlSymmetry">
-
-            <com.example.kotlindemo.widget.FoldTextView
-                android:id="@+id/title_expand_content_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:includeFontPadding="false"
-                android:textColor="@color/colorWhite"
-                android:textSize="14sp"
-                app:showMaxLine="3"
-                app:tipClickable="false"
-                app:tipGravity="0"
-                tools:ignore="SmallSp" />
-
-            <TextView
-                android:id="@+id/title_expand_unmarked_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="@string/title_unmarked"
-                android:textColor="@color/colorGray"/>
-
-        </LinearLayout>
-
     </LinearLayout>
 
-    <View
-        android:id="@+id/spaceView"
+    <TextView
+        android:id="@+id/title_fixed_content_tv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:includeFontPadding="false"
+        android:textColor="@color/colorWhite"
+        android:textSize="11sp"
+        tools:ignore="SmallSp" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
