--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -1,52 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    app:layoutDescription="@xml/step5"
-    app:motionDebug="SHOW_PATH">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/laugh"
-        android:layout_width="132dp"
-        android:layout_height="132dp"
-        android:src="@drawable/lf_combsend_laugh"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tipText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="超级转转转"
-        android:visibility="gone"/>
+        <Button
+            android:id="@+id/singleTranslationBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="0dp"
+            android:text="Single Translation示例"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/laugh"-->
-<!--        android:layout_width="42dp"-->
-<!--        android:layout_height="42dp"-->
-<!--        android:src="@drawable/lf_combsend_laugh"/>-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#22000000"
+            app:layout_constraintTop_toBottomOf="@+id/singleTranslationBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/heart"-->
-<!--        android:layout_width="42dp"-->
-<!--        android:layout_height="42dp"-->
-<!--        android:src="@drawable/lf_combsend_heart"/>-->
+        <Button
+            android:id="@+id/multiTranslationBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:text="Multi Translation示例"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toBottomOf="@id/singleTranslationBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/like"-->
-<!--        android:layout_width="42dp"-->
-<!--        android:layout_height="42dp"-->
-<!--        android:src="@drawable/lf_combsend_like"/>-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#22000000"
+            app:layout_constraintTop_toBottomOf="@+id/multiTranslationBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-<!--    <TextView-->
-<!--        android:id="@+id/tipText"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:text="Swipe the laugh to show all icon"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
+        <Button
+            android:id="@+id/keyPositionBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:text="Key Position示例"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toBottomOf="@id/multiTranslationBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#22000000"
+            app:layout_constraintTop_toBottomOf="@+id/keyPositionBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/keyAttributeBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:text="Key Attribute示例"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toBottomOf="@id/keyPositionBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#22000000"
+            app:layout_constraintTop_toBottomOf="@+id/keyAttributeBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/keyCycleBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:text="Key Cycle示例"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toBottomOf="@id/keyAttributeBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#22000000"
+            app:layout_constraintTop_toBottomOf="@+id/keyCycleBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/customBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:text="动态属性示例"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toBottomOf="@id/keyCycleBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#22000000"
+            app:layout_constraintTop_toBottomOf="@+id/customBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/withAppBarBtn"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:text="AppBar联动"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintWidth_percent="1.0"
+            app:layout_constraintTop_toBottomOf="@id/customBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
