--- a/app/src/main/res/xml/fold_title_description.xml
+++ b/app/src/main/res/xml/fold_title_description.xml
@@ -8,6 +8,7 @@
         app:motionInterpolator="easeInOut"
         app:duration="200">
 
+
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -21,13 +22,23 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Constraint
-            android:id="@+id/spaceView"
-            android:layout_width="match_parent"
+            android:id="@+id/title_fixed_content_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:layout_marginLeft="55dp"
             app:layout_constraintLeft_toLeftOf="@id/title_layout"
-            app:layout_constraintRight_toRightOf="@id/title_layout"
-            app:layout_constraintTop_toBottomOf="@id/title_layout"/>
+            app:layout_constraintTop_toTopOf="@id/title_layout"
+            app:layout_constraintBottom_toBottomOf="@id/title_layout">
+
+<!--            <CustomAttribute-->
+<!--                app:attributeName="text"-->
+<!--                app:customStringValue="收起文本"/>-->
+
+<!--            <CustomAttribute -->
+<!--                app:attributeName="textColor"-->
+<!--                app:customColorValue="#1c75ff"/>-->
+
+        </Constraint>
 
     </ConstraintSet>
 
@@ -36,19 +47,31 @@
         <Constraint
             android:id="@+id/title_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="148dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Constraint
-            android:id="@+id/spaceView"
-            android:layout_width="match_parent"
+            android:id="@+id/title_fixed_content_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:layout_marginTop="80dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             app:layout_constraintLeft_toLeftOf="@id/title_layout"
-            app:layout_constraintRight_toRightOf="@id/title_layout"
-            app:layout_constraintTop_toBottomOf="@id/title_layout"/>
+            app:layout_constraintTop_toTopOf="@id/title_layout"
+            app:layout_constraintBottom_toBottomOf="@id/title_layout">
+
+<!--            <CustomAttribute-->
+<!--                app:attributeName="text"-->
+<!--                app:customStringValue="展开文本"/>-->
+
+<!--            <CustomAttribute -->
+<!--                app:attributeName="textColor"-->
+<!--                app:customColorValue="#d42f65"/>-->
+
+        </Constraint>
 
     </ConstraintSet>
 
