--- a/app/src/main/res/xml/motion_key_attribute.xml
+++ b/app/src/main/res/xml/motion_key_attribute.xml
@@ -62,16 +62,16 @@
     <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@+id/laugh"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.15"
             app:layout_constraintVertical_bias="0.5">
-            <CustomAttribute app:attributeName="colorFilter"
-                             app:customColorValue="#1c75ff"/>
+<!--            <CustomAttribute app:attributeName="colorFilter"-->
+<!--                             app:customColorValue="#1c75ff"/>-->
 
         </Constraint>
 
@@ -88,8 +88,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintVertical_bias="0.5">
-            <CustomAttribute app:attributeName="colorFilter"
-                             app:customColorValue="#d42f65"/>
+<!--            <CustomAttribute app:attributeName="colorFilter"-->
+<!--                             app:customColorValue="#d42f65"/>-->
         </Constraint>
 
     </ConstraintSet>
