--- a/app/src/main/res/layout/activity_mark.xml
+++ b/app/src/main/res/layout/activity_mark.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBlack">
+    android:background="@color/colorWhite">
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/markImageView"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:src="@color/colorAccent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/tree_scene"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/smallImgView"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <FrameLayout
         android:id="@+id/markContainerView"
