--- a/app/src/main/res/layout/adapter_position_rank_multi.xml
+++ b/app/src/main/res/layout/adapter_position_rank_multi.xml
@@ -19,9 +19,10 @@
         <LinearLayout
             android:id="@+id/llMultiTip"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:orientation="horizontal"
+            android:layout_height="wrap_content"
             android:paddingTop="22dp"
+            android:paddingBottom="10dp"
+            android:orientation="horizontal"
             android:gravity="center_horizontal"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -33,11 +34,11 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:textColor="@color/C_222222"
                 android:includeFontPadding="false"
                 style="@style/style_text_normal_14"
-                android:text="为你推荐相似好职位"
+                android:text="@string/recommend_similar_jobs"
                 tools:ignore="RtlSymmetry" />
 
             <ImageView
@@ -52,18 +53,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/llMultiTip"
-            app:layout_constraintBottom_toTopOf="@+id/llMultiOperate">
+            app:layout_constraintBottom_toBottomOf="@id/ivMask">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvMultiJob"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:paddingBottom="32dp"
+                android:clipToPadding="false"
                 android:paddingHorizontal="20dp" />
 
         </com.example.kotlindemo.task.mutildelivery.rankmulti.NestedScrollableHost>
 
         <ImageView
+            android:id="@+id/ivMask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/position_rank_item_bottom_bg"
@@ -72,31 +75,33 @@
         <LinearLayout
             android:id="@+id/llMultiOperate"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_marginBottom="12dp"
             android:layout_marginHorizontal="20dp"
+            android:background="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/tvMultiNext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="32dp"
-                android:paddingVertical="14dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/module_common_solid_f0f5ff"
-                android:text="下一个"
+                android:text="@string/next"
                 android:textColor="@color/C_587CF7"
-                style="@style/style_text_bold_16"/>
+                style="@style/style_text_bold_16"
+                android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/tvMultiDelivery"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingVertical="14dp"
-                android:layout_marginStart="16dp"
-                android:gravity="center_horizontal"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:gravity="center"
                 android:background="@drawable/module_common_solid_587cf7"
-                android:text="投递4个职位"
+                tools:text="投递4个职位"
                 android:textColor="@color/C_FFFFFF"
                 style="@style/style_text_bold_16" />
 
