--- a/app/src/main/res/layout/adapter_position_rank_multi_child.xml
+++ b/app/src/main/res/layout/adapter_position_rank_multi_child.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
@@ -31,7 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center_vertical"
+            android:paddingTop="18dp"
             app:layout_constraintStart_toEndOf="@+id/ivMultiCheck"
             app:layout_constraintEnd_toEndOf="parent">
 
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:id="@+id/llMultiJob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toStartOf="@id/tvMultiSalary"
@@ -66,7 +67,7 @@
                         android:paddingVertical="1dp"
                         android:background="@drawable/position_rank_label_bg"
                         android:singleLine="true"
-                        android:text="已投递"
+                        android:text="已发送"
                         android:textColor="@color/C_666666"
                         style="@style/style_text_normal_10"
                         android:visibility="gone"/>
@@ -75,13 +76,13 @@
 
                 <TextView
                     android:id="@+id/tvMultiSalary"
-                    style="@style/style_text_bold_16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginStart="40dp"
                     android:textColor="@color/C_5B7BE9"
-                    tools:text="1.5万-3.5万" />
+                    style="@style/style_text_bold_16"
+                    tools:text="1.5万-3.5万"/>
 
             </RelativeLayout>
 
@@ -89,8 +90,10 @@
                 android:id="@+id/tvMultiCompany"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:textColor="@color/C_666666"
+                android:singleLine="true"
+                android:ellipsize="end"
                 style="@style/style_text_normal_14"
                 tools:text="小米公司.1000人以上"/>
 
@@ -138,9 +141,10 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/viewDivideLine"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="21dp"
                 android:background="@color/C_EEEEEE"/>
 
         </LinearLayout>
