--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,12 @@
     <color name="date_text_color">#fe9a9aaa</color>
     <color name="color_587CF7">#5B7BE9</color>
 
+    <color name="default_shadow_color">#2a000000</color>
+    <color name="default_shadowback_color">#fff</color>
+    <color name="default_textColor">#000</color>
+
+    <color name="white_90">#E6FFFFFF</color>
+    <color name="white_70">#B3FFFFFF</color>
+    <color name="purple_100">#DFE6FF</color>
+
 </resources>
