--- a/app/src/main/res/layout/layout_campus_home_bottom.xml
+++ b/app/src/main/res/layout/layout_campus_home_bottom.xml
@@ -17,35 +17,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:hl_strokeColor="#80D3E2FF"
-            app:hl_strokeWith="0.5dp"
-            app:hl_shadowColor="#2997cbff"
+            app:hl_shadowColor="#3397cbff"
             app:hl_cornerRadius="21dp"
             app:hl_shadowLimit="5dp"
-            app:hl_shadowOffsetY="2dp"
-            app:hl_layoutBackground="#FBFDFE">
+            app:hl_shadowOffsetY="2dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingVertical="12dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginEnd="5dp"
-                    android:background="@color/C_000000" />
-
-                <TextView
-                    android:id="@+id/tvCampusSatrt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/C_222222"
-                    android:textSize="@dimen/F_14"
-                    android:text="宣讲会" />
-
-            </LinearLayout>
+                android:layout_height="38dp" />
 
         </com.example.kotlindemo.widget.shadowlayout.ShadowLayout>
 
@@ -54,35 +33,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:hl_strokeColor="#80D3E2FF"
-            app:hl_strokeWith="0.5dp"
-            app:hl_shadowColor="#2997cbff"
+            app:hl_shadowColor="#3397cbff"
             app:hl_cornerRadius="21dp"
             app:hl_shadowLimit="5dp"
-            app:hl_shadowOffsetY="2dp"
-            app:hl_layoutBackground="#FBFDFE">
+            app:hl_shadowOffsetY="2dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingVertical="12dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginEnd="5dp"
-                    android:background="@color/C_000000" />
-
-                <TextView
-                    android:id="@+id/tvCampusCenter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/C_222222"
-                    android:textSize="@dimen/F_14"
-                    android:text="双选会" />
-
-            </LinearLayout>
+                android:layout_height="38dp"
+                android:src="@color/white_90"/>
 
         </com.example.kotlindemo.widget.shadowlayout.ShadowLayout>
 
@@ -91,35 +50,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:hl_strokeColor="#80D3E2FF"
-            app:hl_strokeWith="0.5dp"
-            app:hl_shadowColor="#2997cbff"
+            app:hl_shadowColor="#3397cbff"
             app:hl_cornerRadius="21dp"
             app:hl_shadowLimit="5dp"
-            app:hl_shadowOffsetY="2dp"
-            app:hl_layoutBackground="#FBFDFE">
+            app:hl_shadowOffsetY="2dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingVertical="12dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginEnd="5dp"
-                    android:background="@color/C_000000" />
-
-                <TextView
-                    android:id="@+id/tvCampusRight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/C_222222"
-                    android:textSize="@dimen/F_14"
-                    android:text="校招解读" />
-
-            </LinearLayout>
+                android:layout_height="38dp"
+                android:src="@color/white_90"/>
 
         </com.example.kotlindemo.widget.shadowlayout.ShadowLayout>
 
