--- a/app/src/main/res/layout/item_multi_delivery.xml
+++ b/app/src/main/res/layout/item_multi_delivery.xml
@@ -41,6 +41,14 @@
             android:layout_marginTop="50dp"
             android:text="投递"/>
 
+        <com.example.kotlindemo.task.mutildelivery.rankmulti.ZLCircleImageView
+            android:id="@+id/ivZl"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="20dp"
+            android:src="@color/colorTitleProgress" />
+
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
